--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flappy-bird",
   "version": "1.0.0",
-  "description": "flappybird-gulp",
+  "description": "Flappy Bird",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
