--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.1",
+    "jshint": "^2.8.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "vinyl-buffer": "^1.0.0",
