--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "node-neat": "^1.7.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
-  }
+  },
+  "dependencies": {},
+  "keywords": [
+    "flappy",
+    "bird"
+  ]
 }
