--- a/flappy-bird/package.json
+++ b/flappy-bird/package.json
@@ -24,9 +24,11 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-uglify": "^1.5.1",
+    "gulp-usemin": "^0.3.28",
     "jshint": "^2.8.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
+    "pump": "^1.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
