--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.1",
+    "gulp-usemin": "^0.3.28",
     "jshint": "^2.8.0",
-    "node-bourbon": "^4.2.3",
-    "node-neat": "^1.7.2",
     "run-sequence": "^2.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
