--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "del": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-bower": "0.0.11",
+    "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-imagemin": "^2.4.0",
